--- a/Ex-5a/Makefile
+++ b/Ex-5a/Makefile
@@ -1,9 +1,5 @@
-
-mpicc -fopenmp mp_omp.c -o mpomp
-
-
 mpomp: mp_omp.c
-	mpicc -o mpomp mp_omp.c
+	mpicc -fopenmp -o mpomp mp_omp.c
 
 clean:
 	rm -f mpomp
